--- a/angular/angular-ej1/src/app/paises/paises.component.html
+++ b/angular/angular-ej1/src/app/paises/paises.component.html
@@ -9,7 +9,15 @@
 
 <div *ngIf="paises">{{ paises }}</div>-->
 
-<ul>
+<!--<ul>
 	<li *ngFor="let pais of listaPaises">{{pais.translations.spa.common}}</li>
+</ul>-->
+  
+<ul>
+	<li *ngFor="let pais of listaPaises">
+		<a [routerLink]="['/pais', pais.name.common]">
+			{{ pais.translations.spa.common }}
+		</a>
+	</li>
 </ul>
 
