--- a/angular/angular-ej1/src/app/app.component.html
+++ b/angular/angular-ej1/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-navbar></app-navbar>
+<!--<app-navbar></app-navbar>-->
 
-<app-paises></app-paises>
+<!--<app-paises></app-paises>-->
 
 <router-outlet />
